perbaikan controller, model, enum, dan pembuatan batas akses